--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "author": "Viljami Kuosmanen <v.kuosmanen@epilot.cloud>",
   "license": "MIT",
   "dependencies": {
-    "@types/handlebars-helpers": "^0.5.3"
+    "@types/handlebars-helpers": "^0.5.3",
+    "handlebars-kit": "^1.2.3"
   },
   "devDependencies": {
     "@types/jest": "^28.1.3",
     "concurrently": "^7.2.2",
     "handlebars": "^4.7.7",
-    "handlebars-kit": "^1.2.3",
     "jest": "^28.1.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
