Switch to commonjs ts build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "compilerOptions": {
     "outDir": "dist/",
-    "lib": [
-      "esnext"
-    ],
-    "module": "es2022",
+    "lib": ["esnext"],
+    "module": "commonjs",
     "target": "es5",
     "moduleResolution": "node",
     "allowJs": true,
