--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "concurrently": "^7.2.2",
     "handlebars": "^4.7.7",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^29.7.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "path-browserify": "^1.0.1",
@@ -48,8 +49,8 @@
     "webpack-cli": "^4.10.0"
   },
   "peerDependencies": {
+    "handlebars": "^4.7.7",
     "lodash": "^4.17.21",
-    "moment": "^2.29.3",
-    "handlebars": "^4.7.7"
+    "moment": "^2.29.3"
   }
 }
